@@ -10,6 +10,7 @@ debsig-verify (0.14) UNRELEASED; urgency=low
     - Use path_make_temp_template().
     - Switch from popen() to subproc_fork() and execlp(), to avoid shell
       invocation and unsafe argument passing.
+    - Use the command module to invoke GnuPG instead of execlp().
   * Do not use an absolute pathname to the GnuPG program.
   * Make the GnuPG program configurable through the DEBSIG_GNUPG_PROGRAM
     environment variable.
